--- a/7/index.html
+++ b/7/index.html
@@ -163,6 +163,7 @@
         top: 69px;
         border-radius: 100%;
         background-color: #000;
+        animation:eyes 1s ease-in-out infinite;
     }
     .eyes:last-child{
         left: 190px;
@@ -243,6 +244,17 @@
 	box-shadow:0 0 15px rgba(0,0,0,0.3);
 	top:454px;
 	left:5px;
+}
+@keyframes eyes{
+	0%{ transform:translateX(0px)}
+	15%{ transform:translateX(8px)}
+	30%{ transform:translateX(16px)}
+	45%{ transform:translateX(20px)}
+	60%{ transform:translateX(18px)}
+	75%{ transform:translateX(16px)}
+	85%{ transform:translateX(8px)}
+	90%{ transform:translateX(5px)}
+	100%{ transform:translateX(0px)}
 }
 </style>
 <body>
