--- a/12/index.html
+++ b/12/index.html
@@ -8,7 +8,20 @@
 <style>
    body{
     background-color: #fef4ad;
+    animation: change-background 3s infinite linear;
    }
+   @keyframes change-background {
+    0%,
+    59%,
+    98%,
+    100% {
+        background-color: #fef4ad;
+    }
+    61%,
+    97% {
+        background-color: #f8ae39;
+    }
+}
    .candle{
        position: absolute;
        left: 50%;
@@ -134,6 +147,58 @@
        background-color: #673c63;
        border-radius: 8px;
        transform:translate(-50%,-100%);
+       animation: stick-animation 3s infinite linear;
+   }
+   @keyframes stick-animation {
+       0%,40%{
+           left: 50%;
+           top: 0%;
+           transform: translate(-50%,-100%);
+       }
+       50%,54%{
+           left: 50%;
+           top: 0%;
+           transform: translate(-50%,-100%);
+       }
+       59%{
+           left: 50%;
+           top: 0%;
+           transform: translate(-50%,-100%);
+       }
+       62%{
+           left: 50%;
+           top: 0%;
+           transform: rotateZ(-15deg) translate(-50%,-100%);
+       }
+       65%{
+           left: 50%;
+           top: 0%;
+           transform: rotateZ(15deg) translate(-50%,-100%);
+       }
+       70%{
+           left: 50%;
+           top: 0%;
+           transform: rotateZ(-5deg) translate(-50%,-100%);
+       }
+       72%{
+           left: 50%;
+           top: 0%;
+           transform: rotateZ(5deg) translate(-50%,-100%);
+       }
+       74%,
+        84% {
+            left: 50%;
+            top: 0%;
+            transform: rotateZ(0deg) translate(-50%, -100%);
+        }
+        85% {
+            transform: rotateZ(180deg) translate(0%, 120%);
+        }
+        92% {
+            left: 50%;
+            top: 0%;
+            transform: translate(-50%, -100%);
+        }
    }
   .candles-big .eyes,
   .candles-small .eyes{
@@ -246,6 +311,43 @@
        left: 40%;
        z-index: 999;
        transform: translate(-50%,-50%);
+       animation: dance-fire 3s infinite linear;
+   }
+   @keyframes dance-fire{
+            59%,
+        89% {
+            left: 40%;
+            width: 0px;
+            height: 0px;
+        }
+        90%,
+        0%,
+        7%,
+        15%,
+        23%,
+        31%,
+        39%,
+        47%,
+        55% {
+            left: 40.8%;
+            width: 16px;
+            height: 20px;
+            background-color: #ffc107;
+        }
+        94%,
+        3%,
+        11%,
+        19%,
+        27%,
+        35%,
+        43%,
+        51%,
+        58% {
+            left: 41.2%;
+            width: 16px;
+            height: 20px;
+            background-color: #ff9800;
+        }
    }
 </style>
 <body>
